--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.2",
     "body-parser": "^2.2.0",
     "bullmq": "^4.18.3",
+    "cors": "^2.8.5",
     "dockerode": "^4.0.9",
     "express": "^5.2.1",
     "ioredis": "^5.8.2",
